--- a/WebShopRomhAkos/Views/Smartphone/Index.cshtml
+++ b/WebShopRomhAkos/Views/Smartphone/Index.cshtml
@@ -20,56 +20,71 @@
 
 </head>
 <body>
-
+    
     <div class="text-center">
-        <h1 class="display-4">Welcome to Our Web Shop</h1>
+        <h1 class="display-4">Welcome to my WebShop</h1>
         <p>Discover our range of products and learn more about them.</p>
     </div>
 
     <div class="container">
         <h2 class="text-center my-4">Mobile Phones</h2>
-        <div class="row">
 
-            <div class="col-md-2 filter-panel-col">
-                <div class="filter-panel">
-                        @using (Html.BeginForm("Index", "Smartphone", FormMethod.Get, new { @class = "form-filter" }))
-                        {
-                            <input type="text" name="searchTerm" class="form-control mb-2" placeholder="Keresés...">
-                            <div class="inputUnit">
-                                <input type="hidden" id="minPrice" name="minPrice">
-                                <input type="hidden" id="maxPrice" name="maxPrice">
-                                <div id="priceSlider" data-max-price="@ViewBag.MaxPriceInDb"></div>
-                                <p class="priceDisplay">$<span id="minPriceDisplay"></span> - $<span id="maxPriceDisplay"></span></p>
-                            </div>
-                            <div class="inputUnit">
-                                <input type="hidden" id="minStorage" name="minStorage">
-                                <input type="hidden" id="maxStorage" name="maxStorage">
-                                <div id="storageSlider" data-min-storage="@ViewBag.MinStorageInDb" data-max-storage="@ViewBag.MaxStorageInDb"></div>
-                                <p class="storageDisplay"><span id="minStorageDisplay"></span>GB - <span id="maxStorageDisplay"></span>GB</p>
-                            </div>
-                            <input type="text" name="ramSize" class="form-control mb-2" placeholder="RAM">
-                            <button type="submit" class="btn btn-primary">Szűrés</button>
-                        }
+        <div class="sortSection-container">
+            @using (Html.BeginForm("Index", "Smartphone", FormMethod.Get))
+            {
+                <div class="form-group d-flex">
+                    <select class="form-control mb-2 mr-2" name="sortOrder">
+                        <option value="price_asc">Ár szerint növekvő</option>
+                        <option value="price_desc">Ár szerint csökkenő</option>
+                    </select>
+                    <input class="btn btn-primary mb-2" type="submit" value="Rendezés" />
+                </div>
+            }
+        </div>
+
+        <div class="row">
+            
+            <div class="col-md-2">
+                <div class="col-md-6-custom filter-panel-col">
+                    @using (Html.BeginForm("Index", "Smartphone", FormMethod.Get, new { @class = "form-filter" }))
+                    {
+                        <input type="text" name="searchTerm" class="form-control mb-2" placeholder="Keresés...">
+                        <div class="inputUnit">
+                            <input type="hidden" id="minPrice" name="minPrice">
+                            <input type="hidden" id="maxPrice" name="maxPrice">
+                            <div id="priceSlider" data-max-price="@ViewBag.MaxPriceInDb"></div>
+                            <p class="priceDisplay">$<span id="minPriceDisplay"></span> - $<span id="maxPriceDisplay"></span></p>
+                        </div>
+                        <div class="inputUnit">
+                            <input type="hidden" id="minStorage" name="minStorage">
+                            <input type="hidden" id="maxStorage" name="maxStorage">
+                            <div id="storageSlider" data-min-storage="@ViewBag.MinStorageInDb" data-max-storage="@ViewBag.MaxStorageInDb"></div>
+                            <p class="storageDisplay"><span id="minStorageDisplay"></span>GB - <span id="maxStorageDisplay"></span>GB</p>
+                        </div>
+                        <input type="text" name="ramSize" class="form-control mb-2" placeholder="RAM">
+                        <button type="submit" class="btn btn-primary">Szűrés</button>
+                    }
                 </div>
             </div>
-            <div class="col-md-10 products-list-col">
+            <div class="col-md-10">
+
                 <div class="row row-container">
-                @foreach (var product in Model)
-                {
-                        <div class="col-md-3 col-md-4-custom col-md-6-custom col-sm-6 col-6">
-                        <a href="@Url.Action("Details", "Smartphone", new { id = product.Id })" class="card-link">
-                            <div class="card mb-4 shadow-sm">
-                                <img src="~/images/@product.ImageUrl" class="card-img-top" alt="@product.Name">
-                                <div class="card-body">
-                                    <h5 class="card-title">@product.Name</h5>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <small class="text-muted">$@product.Price</small>
+                    @foreach (var product in Model)
+                    {
+                        <div class="col-md-3 col-md-4-custom col-md-6-custom products-list-col col-sm-6 col-6">
+                            <a href="@Url.Action("Details", "Smartphone", new { id = product.Id })" class="card-link">
+                                <div class="card mb-4 shadow-sm">
+                                    <img src="~/images/@product.ImageUrl" class="card-img-top" alt="@product.Name">
+                                    <div class="card-body">
+                                        <h5 class="card-title">@product.Name</h5>
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <small class="text-muted">$@product.Price</small>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                    </div>
-                }
+                            </a>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
