--- a/WebShopRomhAkos/Views/Home/Index.cshtml
+++ b/WebShopRomhAkos/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 
     <section class="featured-products-section my-5">
         <h2>Featured Products</h2>
-        <div class="row">
+        <div class="row row-container">
                 @foreach (var product in Model)
                 {
                     <div class="col-md-4">
