--- a/WebShopRomhAkos/Views/Shared/_Layout.cshtml
+++ b/WebShopRomhAkos/Views/Shared/_Layout.cshtml
@@ -7,16 +7,24 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebShopRomhAkos.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebShopRomhAkos</a>
+            
+                <div class="d-md-none d-flex">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCart" asp-action="Cart"><i class="bi bi-cart"></i></a>
+                    <a class="nav-link text-dark" href="/path-to-login"><i class="bi bi-person"></i></a>
+                </div>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
@@ -30,9 +38,15 @@
                         </li>
                     </ul>
                 </div>
+
+                <div class="navbar-nav navbar-right d-none d-md-flex">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCart" asp-action="Cart"><i class="bi bi-cart"></i></a>
+                    <a class="nav-link text-dark" href="/path-to-login"><i class="bi bi-person"></i></a>
+                </div>
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
